| Bug #19395 | mysqld does not always detect cluster shutdown | ||
|---|---|---|---|
| Submitted: | 27 Apr 2006 10:03 | Modified: | 31 May 2006 7:08 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | |
| Assigned to: | Tomas Ulin | Target Version: | |
[27 Apr 2006 10:03]
Tomas Ulin
[19 May 2006 11:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/6619
[31 May 2006 7:08]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.11 changelog; closed.
