    Bug #19395 mysqld does not always detect cluster shutdown     Bug #17610 ndbapi: dropEventOperation leaves object behind, memleak

mysql-test/r/ndb_autodiscover3.result:
  Bug #19395 mysqld does not always detect cluster shutdown
mysql-test/t/disabled.def:
  Bug #19395 mysqld does not always detect cluster shutdown
mysql-test/t/ndb_autodiscover3.test:
  Bug #19395 mysqld does not always detect cluster shutdown
sql/ha_ndbcluster_binlog.cc:
  Bug #19395 mysqld does not always detect cluster shutdown
storage/ndb/include/ndbapi/Ndb.hpp:
  Bug #19395 mysqld does not always detect cluster shutdown
storage/ndb/include/ndbapi/NdbDictionary.hpp:
  Bug #17610 ndbapi: dropEventOperation leaves object behind, memleak
storage/ndb/src/kernel/blocks/suma/Suma.cpp:
  Bug #17610 ndbapi: dropEventOperation leaves object behind, memleak
storage/ndb/src/ndbapi/Ndb.cpp:
  Bug #19395 mysqld does not always detect cluster shutdown
storage/ndb/src/ndbapi/NdbEventOperationImpl.cpp:
  Bug #17610 ndbapi: dropEventOperation leaves object behind, memleak
storage/ndb/src/ndbapi/NdbEventOperationImpl.hpp:
  Bug #17610 ndbapi: dropEventOperation leaves object behind, memleak